# FlowFrag

./: .gitignore  CLAUDE.md  README.md  experiments.jsonl  pyproject.toml
configs/: README.md  abl_baseline_ne_contact_1000.yaml  abl_layers2.yaml  abl_prune_caca.yaml  abl_rt_initonly.yaml  overfit.yaml  overfit_l2_nodes_lift2_rtinject.yaml  overfit_large.yaml  overfit_localframe.yaml  overfit_localframe_strict.yaml  overfit_neural1e_q1neqI.yaml  overfit_neural1e_q1neqI_priorbank_large_stable_wandb.yaml  overfit_neural1e_q1neqI_priorbank_wandb.yaml  overfit_neural1e_q1neqI_stochastic_priortime_effbs16_globalcoarse_cutbond_wandb.yaml  overfit_neural1e_q1neqI_stochastic_priortime_effbs16_globalcoarse_wandb.yaml  overfit_neural1e_q1neqI_stochastic_priortime_effbs16_wandb.yaml  overfit_neural1e_q1neqI_stochastic_priortime_wandb.yaml  overfit_neural1e_q1neqI_strict.yaml  overfit_neural1e_q1neqI_strict_wandb.yaml  overfit_neural1e_q1neqI_tonly_wandb.yaml  overfit_newton_euler_retest.yaml  overfit_phase1_bodyframe.yaml  overfit_phase1_bodyframe_only.yaml  overfit_phase2_boundary.yaml  overfit_phase2b_dummy_atoms.yaml  overfit_phase3_separate_omega.yaml  overfit_shlmax2_all.yaml  overfit_unified.yaml  overfit_unified_ne_contact.yaml  overfit_unified_newton_euler.yaml  split.json  train.yaml  train_analytic_sigma1.yaml  train_bench.yaml  train_neural1e_ligand_uniform_fixed.yaml  train_sigma1.yaml  train_sigma5.yaml  train_test1epoch.yaml  train_unified_ne_contact_adamw_1000.yaml  train_v2.yaml  (+3 more)
data/: README.md  covalent_binders_v2020.txt
docs/: CURRENT_STATUS.md  DATASET_SCHEMA.md  DATA_GRAPH_TOPOLOGY.md  ablation_handoff_2026-03-22.md  architecture.md  benchmark.md  benchmark_eval_2026-04-10.md  benchmark_eval_2026-04-11.md  confidence.md  confidence_v2.md  dataset.md  experiment_log.md  scoring.md  (+3 more)
(+100 files in other folders)
